Format main `Cargo.toml` file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
-[workspace]
+[package]
+name = "rid"
+version = "0.1.0"
+authors = ["Ayman Al-Qadhi <alqd@protonmail.com>"]
+edition = "2021"
 
-members = [
-  "data"
-]
+[workspace]
+members = [ "data" ]
