--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ authors = ["Ayman Al-Qadhi <alqd@protonmail.com>"]
 members = ["data", "data/migration", "data/entity"]
 
 [workspace.dependencies]
-uuid = { name = "1.2.0" }
+uuid = "1.2.0"
+async-trait = "0.1.57"
 
 [dependencies]
 data = { path = "./data" }
